more type hinting